<resources>
    <string name="app_name">intelliShopping</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="NoConnection">Sorry! Not connected to internet</string>
    <string-array name="navigation_drawer_items_array">
        <item>Home</item>
        <item>Fixtures</item>
        <item>Table</item>
    </string-array>
    <string name="fadetime">800</string>








    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">%1$s won\'t work unless you enable Google Play services.</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">%1$s won\'t run without Google Play services, which are missing from your device.</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">%1$s won\'t run without Google Play services, which are not supported by your device.</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">%1$s won\'t run unless you update Google Play services.</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">%1$s won\'t run without Google Play services, which are currently updating.</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="search_menu_title">Search</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="Destination_address">Destination Address</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>

    <string name="amount">Amount</string>

    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="balance">Balance: %s</string>
    <string name="barcode_error">Error reading barcode: %1$s</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_header">Click Read Barcode to read a barcode</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Bluetooth Chat.</string>
    <string name="button_connect">Connect</string>
    <string name="button_disconnect">Disconnect</string>
    <string name="button_scan">Scan for devices</string>
    <string name="cancel">CANCEL</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="configure">Configure</string>
    <string name="configure_wallet">Configure Wallet</string>
    <string name="connect">Connect</string>
    <string name="create_transaction">Create Transaction</string>
    <string name="create_transaction_for">Create Transaction For: %s</string>
    <string name="credentials">Credentials</string>
    <string name="device_connection_was_lost">Device connection was lost</string>
    <string name="discoverable">Make discoverable</string>
    <string name="get_balance">Get Balance</string>
    <string name="grant">GRANT</string>
    <string name="grant_permission">Grant Permission</string>
    <string name="insecure_connect">Connect a device - Insecure</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission. The application will now exit.</string>
    <string name="none_found">No devices found</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="not_connected">You are not connected to a device</string>
    <string name="ok">OK</string>
    <string name="password_toggle_content_description">Toggle password visibility</string>
    <string name="path_password_eye">M12,4.5C7,4.5 2.73,7.61 1,12c1.73,4.39 6,7.5 11,7.5s9.27,-3.11 11,-7.5c-1.73,-4.39 -6,-7.5 -11,-7.5zM12,17c-2.76,0 -5,-2.24 -5,-5s2.24,-5 5,-5 5,2.24 5,5 -2.24,5 -5,5zM12,9c-1.66,0 -3,1.34 -3,3s1.34,3 3,3 3,-1.34 3,-3 -1.34,-3 -3,-3z</string>
    <string name="path_password_eye_mask_strike_through">M2,4.27 L19.73,22 L22.27,19.46 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_eye_mask_visible">M2,4.27 L2,4.27 L4.54,1.73 L4.54,1.73 L4.54,1 L23,1 L23,23 L1,23 L1,4.27 Z</string>
    <string name="path_password_strike_through">M3.27,4.27 L19.74,20.74</string>
    <string name="pay">Pay</string>
    <string name="permission_camera">This app needs camera permission to scan barcode</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="ripple_Address">rJTvJxwnvoKmLN6DmYMD8z6hZgP5GnbXW2</string>
    <string name="ripple_secret">saErycKzn6C5F1xXs7uGKZkLhDnEV</string>
    <string name="scan">Scan</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="secure_connect">Connect a device - Secure</string>
    <string name="select_device">Select a device to connect</string>
    <string name="send">Send</string>
    <string name="sender_address">Sender Address</string>
    <string name="sender_secret">Sender Secret</string>

    <string name="title_connected_to">Connected to %1$s</string>
    <string name="title_connecting">Connecting...</string>
    <string name="title_device_connected">Connected Devices</string>
    <string name="title_devices">Devices</string>
    <string name="title_not_connected">Not connected</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="use_flash">Use Flash</string>
</resources>
