<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:background="@color/bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:id="@+id/headerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:textSize="28sp"
                android:typeface="serif"
                android:textColor="@color/text_normal"
                android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="20dp"
                android:text="@string/configure_wallet" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="20sp"
                    android:typeface="serif"
                    android:textColor="@color/text_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sender_address" />

                <ImageButton
                    android:textSize="12sp"
                    android:typeface="serif"
                    android:textColor="@color/text_normal"
                    android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
                    android:id="@+id/btn_scan"
                    android:background="@color/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher"
                    android:text="@string/scan" />
            </FrameLayout>

            <EditText
                android:id="@+id/text_my_address"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ripple_Address"
                android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|number|numberSigned|numberDecimal|numberPassword|phone" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:textSize="20sp"
                    android:typeface="serif"
                    android:textColor="@color/text_normal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sender_address" />

                <ImageButton
                    android:textSize="12sp"
                    android:typeface="serif"
                    android:textColor="@color/text_normal"
                    android:layout_gravity="top|bottom|left|right|center_vertical|fill_vertical|center_horizontal|fill_horizontal|center|fill|start|end"
                    android:id="@+id/btn_scan1"
                    android:background="@color/clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher"
                    android:text="@string/scan" />
            </FrameLayout>

            <EditText
                android:id="@+id/text_my_secret"
                android:focusable="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ripple_secret"
                android:inputType="text|textCapCharacters|textCapWords|textCapSentences|textAutoCorrect|textAutoComplete|textMultiLine|textImeMultiLine|textNoSuggestions|textUri|textEmailAddress|textEmailSubject|textShortMessage|textLongMessage|textPersonName|textPostalAddress|textPassword|textVisiblePassword|textWebEditText|textFilter|textPhonetic|textWebEmailAddress|textWebPassword|number|numberSigned|numberDecimal|numberPassword|phone" />

            <Button
                android:textColor="#fff"
                android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end"
                android:id="@+id/btn_get_balance"
                android:background="@color/colorPrimaryDark"
                android:paddingLeft="70dp"
                android:paddingTop="5dp"
                android:paddingRight="70dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/get_balance" />

            <TextView
                android:textSize="28sp"
                android:typeface="serif"
                android:textColor="@color/text_normal"
                android:layout_gravity="left|right|center_horizontal|fill_horizontal|center|fill|start|end"
                android:id="@+id/text_balance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:text="@string/balance" />
        </LinearLayout>

        <Button
            android:textColor="@color/text_button"
            android:id="@+id/btn_configure"
            android:background="#0000"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/configure"
            android:layout_below="@+id/headerview"
            android:layout_centerInParent="true" />
    </RelativeLayout><WebView
    android:id="@+id/main_webview"
    android:background="@color/bg"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="match_parent" /><LinearLayout
    android:id="@+id/barcode_scanner"
    android:background="@color/bg"
    android:visibility="gone"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <fragment
        android:name="info.androidhive.barcode.BarcodeReader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
      />
</LinearLayout><FrameLayout
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent" /></RelativeLayout>
